tests/diag/import_no_package.ty
import "core:strings"

fn main():
    println(strings.to_upper("hi"))
